--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,8 @@ jobs:
   build:
     working_directory: ~/mern-starter
     docker:
-      - image: circleci/node:4.8.2
+      # Node 8 LTS
+      - image: circleci/node:carbon
     steps:
       - checkout
       - run:
@@ -12,7 +13,7 @@ jobs:
       - restore_cache:
           key: dependency-cache-{{ checksum "package.json" }}
       - run:
-          name: install-npm-wee
+          name: install-dependencies
           command: npm install
       - save_cache:
           key: dependency-cache-{{ checksum "package.json" }}
