Base scripts and core in TypeScript (#2)
* Base for TypeScript

* Complete business logic for core

* Javascript implementation

* Add circleci dependencies

* Fix package name

* Extended tsconfig

* Move to function

* Temp change: publish compiled source

* Add hoisting

* Remove javascript files

* Remove web example

* Revert gitignore

* Add unit tests

* Cleanup config for typescript

* Change interface names

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,10 +15,17 @@ jobs:
       - run:
           name: install-dependencies
           command: npm install
+      - run:
+          name: install-package-dependencies
+          command: npm run bootstrap
       - save_cache:
           key: dependency-cache-{{ checksum "package.json" }}
           paths:
             - ./node_modules
+      - run:
+          # Hoisting will cache some of the packages, but rest needs to be installed separtely
+          name: install-package-dependencies-after-cache
+          command: npm run bootstrap
       - run:
           name: test
           command: npm test
