--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -2,12 +2,12 @@
   "name": "@aerogearservices/core",
   "version": "1.0.0",
   "description": "Core configuration parser for AeroGear services",
-  "types": "src/index.ts",
+  "types": "dist/types/index.d.ts",
   "author": "Aerogear <aerogear@googlegroups.com>",
   "license": "Apache-2.0",
-  "main": "src/",
+  "main": "dist/index.js",
   "scripts": {
-    "clean": "del coverage_report src/**/*.js src/**/*.map test/**/*.js test/**/*.map",
+    "clean": "del coverage src/**/*.js src/**/*.map test/**/*.js test/**/*.map",
     "build": "tsc",
     "test": "nyc mocha"
   },
@@ -28,7 +28,6 @@
       "lcov",
       "text"
     ],
-    "report-dir": "coverage_report",
     "lines": 75,
     "functions": 100,
     "branches": 80
