--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,9 +9,7 @@
     "module": "es6",
     "target": "es5",
     "jsx": "react",
-    //"allowJs": true,
-    "declaration": true,
-    "declarationDir": "./types"
+    "declaration": true
   },
   "exclude": [
     "node_modules"
