--- a/example/react-native/android/app/build.gradle
+++ b/example/react-native/android/app/build.gradle
@@ -98,7 +98,7 @@ android {
     buildToolsVersion "23.0.1"
 
     defaultConfig {
-        applicationId "com.aerogeardemo"
+        applicationId "org.aerogear.reactnative.demo"
         minSdkVersion 16
         targetSdkVersion 22
         versionCode 1
