--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -4,6 +4,7 @@
   "description": "Core SDK for AeroGear services",
   "main": "dist/index.js",
   "browser": "dist/bundle.js",
+  "module": "dist/index.js",
   "types": "dist/types/index.d.ts",
   "author": "Aerogear <aerogear@googlegroups.com>",
   "license": "Apache-2.0",
