--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "esModuleInterop": true,
     "noImplicitAny": true,
     "target": "es5",
+    "module": "UMD",
     "jsx": "react",
     "declaration": true
   },
