--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -9,6 +9,7 @@
   "scripts": {
     "clean": "del coverage src/**/*.js src/**/*.map test/**/*.js test/**/*.map",
     "build": "tsc",
+    "watch": "tsc --watch",
     "test": "nyc mocha"
   },
   "publishConfig": {
@@ -47,9 +48,7 @@
     "nyc": "11.4.1",
     "sinon": "4.3.0",
     "source-map-support": "0.5.3",
-    "ts-node": "4.1.0",
-    "typescript": "2.7.2",
-    "webpack": "^3.11.0"
+    "typescript": "2.7.2"
   },
   "dependencies": {
     "@types/lodash": "4.14.104",
