--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "extends": "../../tsconfig.json",
   "include": [
-    "src/"
+    "src/",
+    "test"
   ],
   "compilerOptions": {
     "outDir": "./dist/",
