Remove test from tsconfig

--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -1,8 +1,7 @@
 {
   "extends": "../../tsconfig.json",
   "include": [
-    "src/",
-    "test"
+    "src/"
   ],
   "compilerOptions": {
     "outDir": "./dist/",
