--- a/example/cordova/package.json
+++ b/example/cordova/package.json
@@ -1,29 +1,37 @@
 {
-    "name": "org.aerogear.services.cordova.example",
-    "displayName": "HelloCordova",
-    "version": "1.0.0",
-    "description": "Demo cordova example app",
-    "main": "index.js",
-    "scripts": {
-        "install": "node node_modules/browserify/bin/cmd.js www/js/index.js -o www/js/bundle.js",
-        "browserify": "node node_modules/browserify/bin/cmd.js www/js/index.js -o www/js/bundle.js"
+  "name": "org.aerogear.services.cordova.example",
+  "displayName": "HelloCordova",
+  "version": "1.0.0",
+  "description": "Demo cordova example app",
+  "main": "index.js",
+  "scripts": {
+    "install": "node node_modules/browserify/bin/cmd.js www/js/index.js -o www/js/bundle.js",
+    "browserify": "node node_modules/browserify/bin/cmd.js www/js/index.js -o www/js/bundle.js",
+    "copy-f7": "cpy node_modules/framework7/dist/js/*.* www/framework7/js && cpy node_modules/framework7/dist/css/*.* www/framework7/css && cpy node_modules/framework7-icons/fonts/*.* www/fonts && cpy node_modules/material-design-icons/iconfont/*.{eot,ttf,woff,woff2} www/fonts",
+    "postinstall": "npm run copy-f7"
+  },
+  "author": "Apache Cordova Team",
+  "license": "Apache-2.0",
+  "dependencies": {
+    "@aerogearservices/core": "file:../../packages/core",
+    "browserify": "^16.1.0",
+    "cordova-android": "^7.1.0",
+    "cordova-browser": "^5.0.3",
+    "cordova-ios": "^4.5.4",
+    "cordova-plugin-whitelist": "^1.3.3",
+    "cpy-cli": "^1.0.1",
+    "framework7": "^2.0.1",
+    "framework7-icons": "^0.8.9",
+    "material-design-icons": "^3.0.1"
+  },
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-whitelist": {}
     },
-    "author": "Apache Cordova Team",
-    "license": "Apache-2.0",
-    "dependencies": {
-        "browserify": "^16.1.0",
-        "cordova-android": "7.0.0",
-        "cordova-ios": "4.5.4",
-        "cordova-plugin-whitelist": "^1.3.3",
-        "@aerogearservices/core": "file:../../packages/core"
-    },
-    "cordova": {
-        "plugins": {
-            "cordova-plugin-whitelist": {}
-        },
-        "platforms": [
-            "ios",
-            "android"
-        ]
-    }
+    "platforms": [
+      "ios",
+      "android",
+      "browser"
+    ]
+  }
 }
