--- a/example/react-native/package.json
+++ b/example/react-native/package.json
@@ -8,13 +8,15 @@
   },
   "dependencies": {
     "@aerogearservices/core": "file:../../packages/core",
-    "react": "16.2.0",
+    "react": "^16.2.0",
     "react-native": "0.53.3",
-    "react-navigation": "^1.1.2"
+    "react-native-navbar": "^2.1.0",
+    "react-navigation": "^1.5.2"
   },
   "devDependencies": {
     "babel-jest": "22.4.0",
     "babel-preset-react-native": "4.0.0",
+    "eslint-config-rallycoding": "^3.2.0",
     "jest": "22.4.0",
     "react-test-renderer": "16.2.0"
   },
