base metrics architecture for js sdk

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,10 +1,14 @@
 {
   "name": "@aerogearservices/core",
   "version": "1.0.0",
-  "description": "Core SDK for AeroGear services",
+  "description": "JavaScript Core SDK for AeroGear services",
   "main": "dist/index.js",
   "types": "types/index.d.ts",
   "author": "Aerogear <aerogear@googlegroups.com>",
+  "keywords": [
+    "aerogear",
+    "mobile"
+  ],
   "license": "Apache-2.0",
   "scripts": {
     "clean": "del coverage src/**/*.js src/**/*.map test/**/*.js test/**/*.map",
@@ -53,6 +57,7 @@
   },
   "dependencies": {
     "@types/lodash": "4.14.104",
+    "axios": "0.18.0",
     "lodash": "4.17.5"
   }
 }
