--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -45,6 +45,7 @@
     "@types/node": "^9.4.6",
     "@types/proxyquire": "1.3.28",
     "@types/sinon": "4.1.3",
+    "@types/uuid": "^3.4.3",
     "chai": "4.1.2",
     "chai-as-promised": "7.1.1",
     "del-cli": "1.1.0",
@@ -52,12 +53,13 @@
     "nyc": "11.4.1",
     "sinon": "4.3.0",
     "source-map-support": "0.5.3",
-    "typescript": "2.7.2",
-    "ts-node": "5.0.1"
+    "ts-node": "5.0.1",
+    "typescript": "2.7.2"
   },
   "dependencies": {
     "@types/lodash": "4.14.104",
     "axios": "0.18.0",
-    "lodash": "4.17.5"
+    "lodash": "4.17.5",
+    "uuid": "^3.2.1"
   }
 }
