--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -41,25 +41,26 @@
     "@types/chai": "4.1.2",
     "@types/chai-as-promised": "7.1.0",
     "@types/cordova-plugin-camera": "2.4.0",
-    "@types/mocha": "2.2.48",
+    "@types/lodash.find": "^4.6.3",
+    "@types/mocha": "^5.0.0",
     "@types/node": "^9.4.6",
     "@types/proxyquire": "1.3.28",
-    "@types/sinon": "4.1.3",
+    "@types/sinon": "^4.3.1",
     "@types/uuid": "^3.4.3",
     "chai": "4.1.2",
     "chai-as-promised": "7.1.1",
     "del-cli": "1.1.0",
-    "mocha": "5.0.1",
-    "nyc": "11.4.1",
-    "sinon": "4.3.0",
-    "source-map-support": "0.5.3",
+    "mocha": "^5.0.5",
+    "mockttp": "^0.7.1",
+    "nyc": "^11.6.0",
+    "sinon": "^4.5.0",
+    "source-map-support": "^0.5.4",
     "ts-node": "5.0.1",
-    "typescript": "2.7.2"
+    "typescript": "^2.8.1"
   },
   "dependencies": {
-    "@types/lodash": "4.14.104",
     "axios": "0.18.0",
-    "lodash": "4.17.5",
+    "lodash.find": "^4.6.0",
     "uuid": "^3.2.1"
   }
 }
