makes core a plugin so that core-cordova can import it

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -12,7 +12,7 @@
   "license": "Apache-2.0",
   "scripts": {
     "clean": "del coverage src/**/*.js src/**/*.map test/**/*.js test/**/*.map",
-    "build": "tsc",
+    "build": "tsc && browserify src/MobileCore.js -o www/bundle.js",
     "watch": "tsc --watch",
     "test": "nyc mocha"
   },
@@ -46,6 +46,7 @@
     "@types/proxyquire": "1.3.28",
     "@types/sinon": "^4.3.1",
     "@types/uuid": "^3.4.3",
+    "browserify": "^16.2.0",
     "chai": "4.1.2",
     "chai-as-promised": "7.1.1",
     "del-cli": "1.1.0",
