adds android internet permission to core-cordova

--- a/packages/core-cordova/plugin.xml
+++ b/packages/core-cordova/plugin.xml
@@ -26,7 +26,7 @@
         </config-file>
 
         <config-file target="AndroidManifest.xml" parent="/*">
-            <!-- Add permissions here -->
+            <uses-permission android:name="android.permission.INTERNET" />
         </config-file>
 
         <source-file
