--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -42,20 +42,18 @@
     "branches": 80
   },
   "devDependencies": {
+    "@types/bluebird": "3.5.20",
     "@types/chai": "4.1.2",
     "@types/chai-as-promised": "7.1.0",
-    "@types/cordova-plugin-camera": "2.4.0",
-    "@types/lodash.find": "^4.6.3",
     "@types/mocha": "^5.0.0",
     "@types/node": "^9.4.6",
     "@types/proxyquire": "1.3.28",
     "@types/sinon": "^4.3.1",
-    "@types/uuid": "^3.4.3",
+    "bluebird": "^3.5.1",
     "chai": "4.1.2",
     "chai-as-promised": "7.1.1",
     "del-cli": "1.1.0",
     "mocha": "^5.0.5",
-    "mockttp": "^0.7.1",
     "nyc": "^11.6.0",
     "sinon": "^4.5.0",
     "source-map-support": "^0.5.4",
