--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@aerogearservices/core",
+  "name": "@aerogear/core",
   "version": "1.0.0",
   "description": "JavaScript Core SDK for AeroGear services",
   "main": "dist/index.js",
