--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -60,6 +60,7 @@
     "typescript": "^2.8.1"
   },
   "dependencies": {
+    "@aerogear/core": "0.1.0",
     "bluebird": "^3.5.1",
     "keycloak-js": "4.0.0-beta.1",
     "url": "^0.11.0"
