--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
 		"lint": "tslint '*/*/src/**/*.ts' '*/*/test/**/*.ts'",
 		"build": "lerna run build",
 		"watch": "lerna run watch",
-		"publishCanary": "lerna run publish --canary",
-		"publish": "lerna run publish",
+		"publishCanary": "lerna publish --canary",
+		"publish": "lerna publish",
 		"clean": "npm-run-all clean:*",
 		"clean:packages": "lerna run clean",
 		"clean:dependencies": "lerna clean --yes",
