feat: automated releases with CircleCI and lerna

--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
 		"lint": "tslint '*/*/src/**/*.ts' '*/*/test/**/*.ts'",
 		"build": "lerna run build",
 		"watch": "lerna run watch",
+		"prep-release": "./scripts/prepareRelease.sh",
+		"validate-release": "./scripts/validateRelease.sh",
 		"publishCanary": "lerna publish --canary",
-		"publish": "lerna publish",
+		"publish": "lerna exec npm publish",
 		"clean": "npm-run-all clean:*",
 		"clean:packages": "lerna run clean",
 		"clean:dependencies": "lerna clean --yes",
@@ -23,7 +25,7 @@
 	"devDependencies": {
 		"del-cli": "1.1.0",
 		"depcheck": "^0.6.8",
-		"lerna": "^2.9.0",
+		"lerna": "^2.10.2",
 		"npm-check-updates": "2.13.0",
 		"npm-run-all": "4.1.2",
 		"opn-cli": "3.1.0",
