ci: authenticate with npm using NPM_TOKEN env var

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,6 +47,8 @@ jobs:
       - image: circleci/node:carbon
     steps:
       - checkout
+        # Allows us to authenticate with the npm registry
+      - run: echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" > ~/.npmrc
       - run: CI=true npm run prep-release
       - run: TAG=$CIRCLE_TAG npm run validate-release
       - run: npm run publish
