--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -51,6 +51,7 @@
   "devDependencies": {
     "@types/chai": "4.1.2",
     "@types/chai-as-promised": "7.1.0",
+    "@types/loglevel": "^1.5.3",
     "@types/mocha": "^5.0.0",
     "@types/node": "^9.4.6",
     "@types/proxyquire": "1.3.28",
@@ -68,6 +69,7 @@
   "dependencies": {
     "@aerogear/core": "0.2.0",
     "keycloak-js": "4.0.0-beta.1",
+    "loglevel": "^1.6.1",
     "url": "^0.11.0"
   }
 }
