--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -48,6 +48,7 @@
     "@types/chai": "4.1.2",
     "@types/chai-as-promised": "7.1.0",
     "@types/lodash.find": "^4.6.3",
+    "@types/loglevel": "^1.5.3",
     "@types/mocha": "^5.0.0",
     "@types/node": "^9.4.6",
     "@types/proxyquire": "1.3.28",
@@ -68,6 +69,7 @@
   "dependencies": {
     "axios": "0.18.0",
     "lodash.find": "^4.6.0",
+    "loglevel": "^1.6.1",
     "uuid": "^3.2.1"
   }
 }
