--- a/packages/security/package.json
+++ b/packages/security/package.json
@@ -25,5 +25,10 @@
     "url": "https://github.com/aerogear/aerogear-js-sdk/issues"
   },
   "homepage": "https://github.com/aerogear/aerogear-js-sdk#readme",
-  "dependencies": {}
+  "devDependencies": {
+    "mocha": "^5.1.1",
+    "@types/chai": "^4.1.3",
+    "chai": "^4.1.2",
+    "nyc": "^11.7.1"
+  }
 }
