--- a/packages/security-cordova/plugin.xml
+++ b/packages/security-cordova/plugin.xml
@@ -8,6 +8,10 @@
     <name>cordova-plugin-aerogear-security</name>
 
     <dependency id="cordova-plugin-iroot" version="0.7.0" />
+
     <dependency id="cordova-plugin-device" version="2.0.2" />
+
+    <dependency id="cordova-plugin-is-debug" version="^1.0.0" />
+
 
 </plugin>
