AEROGEAR-2686 Allow security check results to be reported using metrics
In our Android SDK we allow the results of a security check to be published
using the metrics SDK. This is currently not available in our JS SDK.

This adds a function that allows the check results to be parsed into a
format that can be published using the metrics SDK and publishes them

--- a/packages/security/package.json
+++ b/packages/security/package.json
@@ -33,5 +33,8 @@
     "@types/chai": "^4.1.3",
     "chai": "^4.1.2",
     "nyc": "^11.7.1"
+  },
+  "dependencies": {
+    "@aerogear/core": "^0.2.1"
   }
 }
