--- a/package.json
+++ b/package.json
@@ -34,5 +34,8 @@
 		"tslint": "5.8.0",
 		"typedoc": "^0.11.1",
 		"typescript": "^2.7.2"
+	},
+	"dependencies": {
+		"@antora/site-generator-default": "^1.0.1"
 	}
 }
