AEROGEAR-2686 Fix CircleCI build

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,6 +18,9 @@ jobs:
       - run:
           name: install-package-dependencies
           command: npm run bootstrap
+      - run:
+          name: run-build
+          command: npm run build
       - save_cache:
           key: dependency-cache-{{ checksum "package.json" }}
           paths:
