--- a/packages/security/package.json
+++ b/packages/security/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@aerogear/security",
   "version": "0.1.0",
-  "description": "",
+  "description": "AeroGear Services JavaScript Security SDK",
   "main": "dist/index.js",
   "types": "types/index.d.ts",
   "scripts": {
