--- a/packages/security/package.json
+++ b/packages/security/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@aerogear/security",
-  "version": "0.1.0",
+  "version": "0.3.0",
   "description": "AeroGear Services JavaScript Security SDK",
   "main": "dist/index.js",
   "types": "types/index.d.ts",
@@ -29,12 +29,12 @@
     "@aerogear/core": "0.2.1"
   },
   "devDependencies": {
-    "mocha": "^5.1.1",
     "@types/chai": "^4.1.3",
     "chai": "^4.1.2",
+    "mocha": "^5.1.1",
     "nyc": "^11.7.1"
   },
   "dependencies": {
-    "@aerogear/core": "^0.2.1"
+    "@aerogear/core": "0.3.0"
   }
 }
