--- a/packages/metrics-cordova/package.json
+++ b/packages/metrics-cordova/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@aerogear/cordova-plugin-aerogear-metrics",
-  "version": "0.2.1",
-  "description": "Cordova plugin for @aerogear/metrics",
+  "version": "0.3.0",
+  "description": "Cordova plugin for AeroGear Metrics",
   "cordova": {
     "id": "cordova-plugin-aerogear-metrics",
     "platforms": []
