--- a/package.json
+++ b/package.json
@@ -1,41 +1,42 @@
 {
-	"name": "AeroGearServicesWeb",
-	"version": "1.0.0",
-	"private": true,
-	"description": "AeroGear Services Web/Cordova SDK mono repository",
-	"main": "index.js",
-	"scripts": {
-		"test": "lerna run test",
-		"cleanInstall": "lerna exec npm install --ignore-scripts",
-		"bootstrap": "lerna bootstrap",
-		"lint": "tslint '*/*/src/**/*.ts' '*/*/test/**/*.ts'",
-		"build": "lerna run build",
-		"watch": "lerna run watch",
-		"prep-release": "./scripts/prepareRelease.sh",
-		"validate-release": "./scripts/validateRelease.sh",
-		"publishCanary": "lerna publish --canary",
-		"publish": "lerna exec npm publish",
-		"clean": "npm-run-all clean:*",
-		"clean:packages": "lerna run clean",
-		"clean:dependencies": "lerna clean --yes",
-		"update:check": "lerna exec --concurrency 1 -- ncu",
-		"update:run": "lerna exec -- ncu -a --removeRange -x 'fh-js-sdk'",
-		"depcheck": "lerna exec --parallel --stream -- depcheck --dev --specials='mocha,bin' --ignores='ts-node,@types/*' --ignore-dirs='example'"
-	},
-	"devDependencies": {
-		"del-cli": "1.1.0",
-		"depcheck": "^0.6.8",
-		"lerna": "^2.10.2",
-		"npm-check-updates": "2.13.0",
-		"npm-run-all": "4.1.2",
-		"opn-cli": "3.1.0",
-		"ts-loader": "^3.5.0",
-		"ts-node": "5.0.1",
-		"tslint": "5.8.0",
-		"typedoc": "^0.11.1",
-		"typescript": "^2.7.2"
-	},
-	"dependencies": {
-		"@antora/site-generator-default": "^1.0.1"
-	}
+  "name": "AeroGearServicesWeb",
+  "version": "1.0.0",
+  "private": true,
+  "description": "AeroGear Services Web/Cordova SDK mono repository",
+  "main": "index.js",
+  "scripts": {
+    "test": "lerna run test",
+    "cleanInstall": "lerna exec npm install --ignore-scripts",
+    "bootstrap": "lerna bootstrap",
+    "lint": "tslint '*/*/src/**/*.ts' '*/*/test/**/*.ts'",
+    "build": "lerna run build",
+    "watch": "lerna run watch",
+    "release:prep": "./scripts/prepareRelease.sh",
+    "release:validate": "./scripts/validateRelease.sh",
+    "updateXml": "lerna exec -- \\$LERNA_ROOT_PATH/scripts/updatePluginXmlVersion.sh",
+    "publish:canary": "lerna publish --canary",
+    "publish": "lerna exec npm publish",
+    "clean": "npm-run-all clean:*",
+    "clean:packages": "lerna run clean",
+    "clean:dependencies": "lerna clean --yes",
+    "update:check": "lerna exec --concurrency 1 -- ncu",
+    "update:run": "lerna exec -- ncu -a --removeRange -x 'fh-js-sdk'",
+    "depcheck": "lerna exec --parallel --stream -- depcheck --dev --specials='mocha,bin' --ignores='ts-node,@types/*' --ignore-dirs='example'"
+  },
+  "devDependencies": {
+    "del-cli": "1.1.0",
+    "depcheck": "^0.6.8",
+    "lerna": "^2.10.2",
+    "npm-check-updates": "2.13.0",
+    "npm-run-all": "4.1.2",
+    "opn-cli": "3.1.0",
+    "ts-loader": "^3.5.0",
+    "ts-node": "5.0.1",
+    "tslint": "5.8.0",
+    "typedoc": "^0.11.1",
+    "typescript": "^2.7.2"
+  },
+  "dependencies": {
+    "@antora/site-generator-default": "^1.0.1"
+  }
 }
