--- a/packages/push/package.json
+++ b/packages/push/package.json
@@ -31,6 +31,7 @@
     "nyc": "^11.7.1"
   },
   "dependencies": {
-    "@aerogear/core": "0.3.0"
+    "@aerogear/core": "0.3.0",
+    "axios": "^0.18.0"
   }
 }
