ci: allow any tag to kick off release process

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -69,6 +69,6 @@ workflows:
             - build
           filters:
             tags:
-              only: /\d\.\d\.\d/
+              only: /.*/ # allow anything because tag syntax is validated as part of validate-release.sh
             branches:
               ignore: /.*/
