--- a/packages/metrics-cordova/package.json
+++ b/packages/metrics-cordova/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@aerogear/cordova-plugin-aerogear-metrics",
-  "version": "0.4.0",
+  "version": "1.0.0-alpha",
   "description": "Cordova plugin for AeroGear Metrics",
   "cordova": {
     "id": "cordova-plugin-aerogear-metrics",
