--- a/packages/push-cordova/package.json
+++ b/packages/push-cordova/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@aerogear/cordova-plugin-aerogear-push",
-  "version": "0.4.0",
+  "version": "1.0.0-alpha",
   "description": "Cordova plugin for AeroGear Push Notifications",
   "cordova": {
     "id": "cordova-plugin-aerogear-push",
