--- a/packages/push-cordova/plugin.xml
+++ b/packages/push-cordova/plugin.xml
@@ -1,7 +1,7 @@
 <?xml version='1.0' encoding='utf-8'?>
 <plugin
     id="cordova-plugin-aerogear-push"
-    version="0.4.0"
+    version="1.0.0-alpha"
     xmlns="http://apache.org/cordova/ns/plugins/1.0"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
