--- a/packages/push/package.json
+++ b/packages/push/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@aerogear/push",
-  "version": "0.4.0",
+  "version": "1.0.0-alpha",
   "description": "AeroGear Unified Push Registration SDK",
   "main": "dist/index.js",
   "types": "types/index.d.ts",
@@ -34,7 +34,7 @@
     "nyc": "^11.7.1"
   },
   "dependencies": {
-    "@aerogear/core": "0.4.0",
+    "@aerogear/core": "1.0.0-alpha",
     "axios": "^0.18.0"
   }
 }
