--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "clean:dependencies": "lerna clean --yes",
     "update:check": "lerna exec --concurrency 1 -- ncu",
     "update:run": "lerna exec -- ncu -a --removeRange -x 'fh-js-sdk'",
-    "depcheck": "lerna exec --parallel --stream -- depcheck --dev --specials='mocha,bin' --ignores='ts-node,@types/*' --ignore-dirs='example'"
+    "depcheck": "lerna exec --parallel --stream -- depcheck --dev --specials='mocha,bin' --ignores='ts-node,@types/*' --ignore-dirs='example'",
+    "generate:docs": "./scripts/docs.sh"
   },
   "devDependencies": {
     "del-cli": "1.1.0",
