--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "typescript": "3.4.1"
   },
   "dependencies": {
-    "@types/mocha": "5.2.6"
+    "@types/mocha": "5.2.6",
+    "graphql": "^14.2.1"
   },
   "nyc": {
     "extension": [
