--- a/lerna.json
+++ b/lerna.json
@@ -1,10 +1,10 @@
 {
   "lerna": "2.9.0",
   "packages": [
-    "packages/*",
-    "examples/*"
+    "examples/*",
+    "packages/*"
   ],
-  "version": "2.3.1",
+  "version": "0.1.0",
   "command": {
     "publish": {
       "exact": true
