--- a/examples/conflicts/package.json
+++ b/examples/conflicts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "examples",
-  "version": "0.5.1",
+  "version": "0.1.0",
   "private": true,
   "description": "",
   "scripts": {
@@ -11,7 +11,7 @@
   "author": "",
   "license": "Apache-2.0",
   "dependencies": {
-    "apollo-conflicts-server": "*",
+    "apollo-conflicts-server": "0.1.0",
     "axios": "^0.18.0",
     "express": "^4.16.4",
     "graphql": "0.13.2",
