--- a/examples/conflicts/package.json
+++ b/examples/conflicts/package.json
@@ -11,7 +11,8 @@
   "author": "",
   "license": "Apache-2.0",
   "dependencies": {
-    "apollo-conflicts-server": "0.2.0",
+    "@aerogear/voyager-server": "^0.5.1",
+    "apollo-conflicts-server": "^0.2.0",
     "axios": "^0.18.0",
     "express": "^4.16.4",
     "graphql": "0.13.2",
