--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -2,7 +2,7 @@
 title: Apollo Offline Client
 email:
 description:
-baseurl: "ApolloOfflineClient" # the subpath of your site, e.g. /blog
+baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://offix.dev"
 remote_theme: alexander-heimbuch/millidocs
 # theme: millidocs
