--- a/packages/apollo-conflicts-server/package.json
+++ b/packages/apollo-conflicts-server/package.json
@@ -21,6 +21,7 @@
   },
   "devDependencies": {
     "ava": "1.4.1",
+    "graphql": "^14.2.1",
     "ts-node": "8.1.0",
     "typescript": "3.4.4"
   },
