--- a/packages/offix-client/package.json
+++ b/packages/offix-client/package.json
@@ -23,11 +23,13 @@
     "@types/graphql": "14.2.0",
     "@types/mocha": "5.2.6",
     "@types/ws": "6.0.1",
+    "@types/fetch-mock": "^7.2.3",
     "chai": "4.2.0",
-    "del": "4.1.0",
+    "del": "4.1.1",
+    "fetch-mock": "^7.3.3",
     "mocha": "6.1.4",
     "ts-node": "8.1.0",
-    "typescript": "3.4.4"
+    "typescript": "3.4.5"
   },
   "dependencies": {
     "@aerogear/core": "2.4.0",
