--- a/packages/offix-client/package.json
+++ b/packages/offix-client/package.json
@@ -48,7 +48,8 @@
     "graphql": "14.2.1",
     "graphql-tag": "2.10.1",
     "graphql-tools": "4.0.4",
-    "subscriptions-transport-ws": "0.9.16"
+    "subscriptions-transport-ws": "0.9.16",
+    "util": "^0.12.0"
   },
   "gitHead": "c52429fc496cfdbaaf06fd55a509f14b12c7ce1c"
 }
