--- a/examples/conflicts/package.json
+++ b/examples/conflicts/package.json
@@ -16,7 +16,8 @@
     "axios": "^0.18.0",
     "express": "^4.16.4",
     "graphql": "0.13.2",
-    "graphql-tools": "^4.0.3"
+    "graphql-tools": "^4.0.3",
+    "offix-cache": "^0.1.0"
   },
   "devDependencies": {
     "@types/graphql": "^14.0.3",
