--- a/packages/offix-client/package.json
+++ b/packages/offix-client/package.json
@@ -20,10 +20,10 @@
     "@types/apollo-upload-client": "8.1.1",
     "@types/chai": "4.1.7",
     "@types/debug": "4.1.4",
+    "@types/fetch-mock": "^7.2.3",
     "@types/graphql": "14.2.0",
     "@types/mocha": "5.2.6",
     "@types/ws": "6.0.1",
-    "@types/fetch-mock": "^7.2.3",
     "chai": "4.2.0",
     "del": "4.1.1",
     "fetch-mock": "^7.3.3",
@@ -33,9 +33,8 @@
   },
   "dependencies": {
     "@aerogear/core": "2.4.0",
-    "apollo-cache-inmemory": "1.5.1",
     "@graphqlheroes/apollo-cache-persist": "0.1.2",
-    "idb-localstorage": "^0.2.0",
+    "apollo-cache-inmemory": "1.5.1",
     "apollo-client": "2.5.1",
     "apollo-link": "1.2.11",
     "apollo-link-context": "1.0.17",
@@ -48,6 +47,8 @@
     "graphql": "14.2.1",
     "graphql-tag": "2.10.1",
     "graphql-tools": "4.0.4",
+    "idb-localstorage": "^0.2.0",
+    "offix-cache": "^0.1.0",
     "subscriptions-transport-ws": "0.9.16",
     "util": "^0.12.0"
   },
