--- a/packages/offix-server/package.json
+++ b/packages/offix-server/package.json
@@ -31,8 +31,5 @@
   "publishConfig": {
     "access": "public"
   },
-  "gitHead": "c52429fc496cfdbaaf06fd55a509f14b12c7ce1c",
-  "dependencies": {
-    "offix-cache": "^0.1.0"
-  }
+  "gitHead": "c52429fc496cfdbaaf06fd55a509f14b12c7ce1c"
 }
