--- a/packages/offix-cache/package.json
+++ b/packages/offix-cache/package.json
@@ -30,5 +30,9 @@
     "graphql": "14.2.1",
     "util": "0.12.0"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/aerogear/offix.git"
+  },
   "license": "Apache-2.0"
 }
