--- a/packages/offix-server/package.json
+++ b/packages/offix-server/package.json
@@ -10,6 +10,10 @@
     "compile:clean": "tsc --build tsconfig.json --clean"
   },
   "license": "Apache-2.0",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/aerogear/offix.git"
+  },
   "ava": {
     "compileEnhancements": false,
     "extensions": [
@@ -30,6 +34,5 @@
   },
   "publishConfig": {
     "access": "public"
-  },
-  "gitHead": "c52429fc496cfdbaaf06fd55a509f14b12c7ce1c"
+  }
 }
