BREAKING: Dropping server side conflict resolution

--- a/packages/offix-conflicts-server/package.json
+++ b/packages/offix-conflicts-server/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "offix-server",
-  "version": "0.6.1",
+  "name": "offix-conflicts-server",
+  "version": "0.7.0",
   "description": "Offix GraphQL server",
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc --build tsconfig.json",
     "watch": "tsc --build tsconfig.json --watch",
-    "test": "echo TODO",
+    "test": "ava '*.test.ts' '**/*.test.ts'",
     "compile:clean": "tsc --build tsconfig.json --clean"
   },
   "license": "Apache-2.0",
@@ -21,16 +21,22 @@
     ],
     "require": [
       "ts-node/register"
+    ],
+    "files": [
+      "test/**/*"
+    ],
+    "sources": [
+      "src/**/*"
     ]
   },
-  "devDependencies": {
-    "ava": "2.1.0",
-    "graphql": "14.4.1",
-    "ts-node": "8.3.0",
-    "typescript": "3.5.2"
-  },
+    "devDependencies": {
+        "ava": "2.1.0",
+        "graphql": "^14.3.1",
+        "ts-node": "8.2.0",
+        "typescript": "3.5.2"
+    },
   "peerDependencies": {
-    "graphql": "14.4.1"
+     "graphql": "^0.12.0 || ^0.13.0 || ^14.0"
   },
   "publishConfig": {
     "access": "public"
