fix: unit tests for the change

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "coverage": "nyc report --reporter=text-lcov | coveralls",
     "cleanInstall": "lerna exec npm install --ignore-scripts",
     "bootstrap": "lerna bootstrap --no-ci",
-    "lint": "tslint '*/*/src/**/*.ts' '*/*/test/**/*.ts'",
+    "lint": "tslint '*/*/src/**/*.ts' '*/*/test/**/*.ts' --fix",
     "build": "lerna run build",
     "watch": "lerna run watch",
     "release:prep": "./scripts/prepareRelease.sh",
