--- a/packages/offix-cache/package.json
+++ b/packages/offix-cache/package.json
@@ -21,14 +21,17 @@
     "mocha": "6.1.4",
     "offix-client": "0.6.1",
     "ts-node": "8.3.0",
-    "typescript": "3.5.2"
+    "typescript": "3.5.2",
+    "graphql": "14.4.1"
   },
   "dependencies": {
     "apollo-client": "2.5.1",
     "apollo-link": "1.2.11",
     "apollo-utilities": "1.3.2",
-    "graphql": "14.4.1",
     "util": "0.12.0"
+  },
+  "peerDependencies": {
+    "graphql": "^0.12.0 || ^0.13.0 || ^14.0.0"
   },
   "repository": {
     "type": "git",
