--- a/renovate.json
+++ b/renovate.json
@@ -3,5 +3,11 @@
     "config:base",
     ":pinVersions"
   ],
-  "groupName":"all"
+  "groupName":"all",
+  "packageRules": [
+    {
+      "packageNames": ["graphql"],
+      "versionStrategy": "widen"
+    }
+  ]
 }
