--- a/examples/conflicts/package.json
+++ b/examples/conflicts/package.json
@@ -1,23 +1,20 @@
 {
-  "name": "examples",
+  "name": "conflict-examples",
   "version": "0.6.1",
   "private": true,
   "description": "",
   "scripts": {
-    "compile": "exit 0",
-    "watch": "exit 0",
-    "compile:clean": "exit 0"
+    "start": "node index.js"
   },
   "author": "",
   "license": "Apache-2.0",
   "dependencies": {
     "@aerogear/voyager-server": "^0.5.1",
-    "apollo-conflicts-server": "0.4.0",
     "axios": "^0.18.0",
     "express": "^4.16.4",
     "graphql": "0.13.2",
     "graphql-tools": "^4.0.3",
-    "offix-cache": "0.6.1"
+    "offix-conflicts-server": "0.7.0"
   },
   "devDependencies": {
     "@types/graphql": "^14.0.3",
