--- a/examples/conflicts/package.json
+++ b/examples/conflicts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "conflict-examples",
-  "version": "0.6.1",
+  "version": "0.7.0-rc.1",
   "private": true,
   "description": "",
   "scripts": {
@@ -14,7 +14,7 @@
     "express": "^4.16.4",
     "graphql": "0.13.2",
     "graphql-tools": "^4.0.3",
-    "offix-conflicts-server": "0.7.0"
+    "offix-conflicts-server": "0.7.0-rc.1"
   },
   "devDependencies": {
     "@types/graphql": "^14.0.3",
