--- a/lerna.json
+++ b/lerna.json
@@ -4,7 +4,7 @@
     "examples/*",
     "packages/*"
   ],
-  "version": "0.6.1",
+  "version": "0.7.0-rc.1",
   "command": {
     "publish": {
       "exact": true
