--- a/packages/offix-conflicts-server/package.json
+++ b/packages/offix-conflicts-server/package.json
@@ -1,6 +1,6 @@
 {
     "name": "offix-conflicts-server",
-    "version": "0.7.0",
+    "version": "0.7.0-rc.1",
     "description": "Offix GraphQL server",
     "main": "dist/index.js",
     "scripts": {
@@ -28,9 +28,9 @@
     },
     "devDependencies": {
         "ava": "2.1.0",
+        "graphql": "14.4.2",
         "ts-node": "8.3.0",
-        "typescript": "3.5.2",
-        "graphql": "14.4.2"
+        "typescript": "3.5.2"
     },
     "peerDependencies": {
         "graphql": "^0.12.0 || ^0.13.0 || ^14.0.0"
