--- a/packages/offix-client/package.json
+++ b/packages/offix-client/package.json
@@ -38,7 +38,7 @@
   },
   "dependencies": {
     "@aerogear/core": "2.5.0",
-    "@graphqlheroes/apollo-cache-persist": "0.1.2",
+    "apollo-cache-persist": "0.1.1",
     "apollo-cache-inmemory": "1.5.1",
     "apollo-client": "2.5.1",
     "apollo-link": "1.2.11",
