--- a/packages/offix-offline/package.json
+++ b/packages/offix-offline/package.json
@@ -21,43 +21,30 @@
     "access": "public"
   },
   "devDependencies": {
-    "@types/apollo-upload-client": "8.1.2",
     "@types/chai": "4.1.7",
     "@types/debug": "4.1.4",
     "@types/fetch-mock": "7.3.1",
     "@types/graphql": "14.2.2",
     "@types/mocha": "5.2.7",
-    "@types/ws": "6.0.1",
     "chai": "4.2.0",
     "del": "5.0.0",
     "fetch-mock": "7.3.6",
     "graphql": "14.4.2",
     "mocha": "6.1.4",
     "ts-node": "8.3.0",
-    "typescript": "3.5.3"
+    "typescript": "3.5.3",
+    "graphql-tag": "2.10.1"
   },
   "dependencies": {
-    "@aerogear/core": "2.5.0",
-    "apollo-cache-persist": "0.1.1",
     "apollo-cache-inmemory": "1.5.1",
     "apollo-client": "2.5.1",
     "apollo-link": "1.2.11",
-    "apollo-link-context": "1.0.17",
     "apollo-link-error": "1.1.10",
-    "apollo-link-http": "1.5.14",
-    "apollo-link-retry": "2.2.13",
-    "apollo-link-ws": "1.0.17",
-    "apollo-upload-client": "11.0.0",
     "debug": "4.1.1",
-    "graphql-tag": "2.10.1",
-    "graphql-tools": "4.0.5",
     "idb-localstorage": "0.2.0",
-    "offix-cache": "0.7.0-rc.1",
-    "subscriptions-transport-ws": "0.9.16",
-    "util": "0.12.1"
+    "offix-cache": "0.7.0-rc.1"
   },
   "peerDependencies": {
     "graphql": "^0.12.0 || ^0.13.0 || ^14.0.0"
-  },
-  "gitHead": "c52429fc496cfdbaaf06fd55a509f14b12c7ce1c"
+  }
 }
