fix: Use separate type for options

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "cleanInstall": "lerna exec npm install --ignore-scripts",
     "bootstrap": "lerna bootstrap --no-ci",
     "lint": "tslint '*/*/src/**/*.ts' '*/*/test/**/*.ts'",
+    "lint-fix": "tslint '*/*/src/**/*.ts' '*/*/test/**/*.ts' --fix",
     "build": "lerna run build",
     "watch": "lerna run watch",
     "release:prep": "./scripts/prepareRelease.sh",
