--- a/packages/offix-offline/package.json
+++ b/packages/offix-offline/package.json
@@ -1,6 +1,6 @@
 {
   "name": "offix-offline",
-  "version": "0.7.0-rc.1",
+  "version": "0.7.0-rc.2",
   "description": "Offix GraphQL Offline package that exposes Apollo Links ",
   "main": "dist/index.js",
   "types": "types/index.d.ts",
@@ -30,10 +30,10 @@
     "del": "5.0.0",
     "fetch-mock": "7.3.6",
     "graphql": "14.4.2",
+    "graphql-tag": "2.10.1",
     "mocha": "6.1.4",
     "ts-node": "8.3.0",
-    "typescript": "3.5.3",
-    "graphql-tag": "2.10.1"
+    "typescript": "3.5.3"
   },
   "dependencies": {
     "apollo-cache-inmemory": "1.6.2",
@@ -42,7 +42,7 @@
     "apollo-link-error": "1.1.11",
     "debug": "4.1.1",
     "idb-localstorage": "0.2.0",
-    "offix-cache": "0.7.0-rc.1"
+    "offix-cache": "0.7.0-rc.2"
   },
   "peerDependencies": {
     "graphql": "^0.12.0 || ^0.13.0 || ^14.0.0"
