--- a/packages/offix-client/package.json
+++ b/packages/offix-client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "offix-client",
-  "version": "0.7.0-rc.2",
+  "version": "0.7.0",
   "description": "Offix GraphQL Offline Client",
   "main": "dist/index.js",
   "types": "types/index.d.ts",
@@ -49,8 +49,8 @@
     "apollo-upload-client": "11.0.0",
     "debug": "4.1.1",
     "idb-localstorage": "0.2.0",
-    "offix-cache": "0.7.0-rc.2",
-    "offix-offline": "0.7.0-rc.2",
+    "offix-cache": "0.7.0",
+    "offix-offline": "0.7.0",
     "subscriptions-transport-ws": "0.9.16"
   },
   "peerDependencies": {
