--- a/packages/offix-offline/package.json
+++ b/packages/offix-offline/package.json
@@ -1,6 +1,6 @@
 {
   "name": "offix-offline",
-  "version": "0.7.0-rc.2",
+  "version": "0.7.0",
   "description": "Offix GraphQL Offline package that exposes Apollo Links ",
   "main": "dist/index.js",
   "types": "types/index.d.ts",
@@ -42,7 +42,7 @@
     "apollo-link-error": "1.1.11",
     "debug": "4.1.1",
     "idb-localstorage": "0.2.0",
-    "offix-cache": "0.7.0-rc.2"
+    "offix-cache": "0.7.0"
   },
   "peerDependencies": {
     "graphql": "^0.12.0 || ^0.13.0 || ^14.0.0"
