--- a/packages/react-offix-hooks/package.json
+++ b/packages/react-offix-hooks/package.json
@@ -27,8 +27,11 @@
   },
   "devDependencies": {
     "@types/react": "^16.8.24",
-    "react": "^16.8.6",
+    "apollo-cache": "^1.3.2",
+    "apollo-client": "^2.6.3",
+    "apollo-link": "^1.2.12",
     "graphql": "14.4.2",
+    "react": "^16.8.6",
     "ts-node": "8.3.0",
     "typescript": "3.5.3"
   },
