--- a/packages/offix-client/package.json
+++ b/packages/offix-client/package.json
@@ -45,13 +45,10 @@
     "apollo-link-context": "1.0.18",
     "apollo-link-http": "1.5.15",
     "apollo-link-retry": "2.2.14",
-    "apollo-link-ws": "1.0.18",
-    "apollo-upload-client": "11.0.0",
     "debug": "4.1.1",
     "idb-localstorage": "0.2.0",
     "offix-cache": "0.7.1",
-    "offix-offline": "0.7.1",
-    "subscriptions-transport-ws": "0.9.16"
+    "offix-offline": "0.7.1"
   },
   "peerDependencies": {
     "graphql": "^0.12.0 || ^0.13.0 || ^14.0.0"
